src/objects/LRN_Exam_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Exam__c</fullName>
        <label>LRN Exam</label>
        <referenceTo>LRN_Exam__c</referenceTo>
        <relationshipLabel>LRN_Exam_Details</relationshipLabel>
        <relationshipName>LRN_Exam_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Evaluated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Evaluated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Marked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Marked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Question__c</fullName>
        <formula>OR ( 
  ISNULL( Question__r.Question__c ), 
  ISBLANK ( Question__r.Question__c ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>LRN Exam Detail Template</label>
        <referenceTo>LRN_Exam_Detail_Template__c</referenceTo>
        <relationshipLabel>LRN_Exam_Details</relationshipLabel>
        <relationshipName>LRN_Exam_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
    <label>LRN Exam Detail</label>
    <nameField>
        <displayFormat>Exam Detail - {00000}</displayFormat>
        <label>LRN Exam Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LRN Exam Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>